--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 			<li><p><a href="https://mykurumi.github.io/Tugas2.html" style = "color : white">Exercise-2</a></p></li>
 			<li><p><a href="https://mykurumi.github.io/Tugas3.html" style = "color : white">Exercise-3</a></p></li>
 			<li><p><a href="https://mykurumi.github.io/Tugas4.html" style = "color : white">Exercise-4</a></p></li>
+			<li><p><a href="https://mykurumi.github.io/Tugas6.html" style = "color : white">Exercise-6</a></p></li>
 		</ul>
 		<p><center> Want to contact me? Click this link : <a href="https://wa.me/6285361562071" style = "color : white">Whatsapp</a></center></p>	</body>
 </html>
